Fixed error with textarea tag

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                 <input type="date" id="post" name="post">
                 <br />
                 <br />
-                <label for="vent">Vent here:</label>
-                <textarea id="vent" name="vent" rows="4" cols="50">
+                <label for="vent2">Vent here:</label>
+                <textarea id="vent2" name="vent2" rows="4" cols="50">
                 Enter venting here.
                 </textarea>
                 <br />
